refactor(snapshots): remove unused methods
(cherry picked from commit 0a098d5ce3c3cc083bf18bf0f97bce044626b334)